--- a/client/src/assets/scss/app.scss
+++ b/client/src/assets/scss/app.scss
@@ -3,32 +3,37 @@
 @import "./variables";
 @include foundation-everything;
 
+
+/* square buttons */
+.rec.rec-arrow {
+  border-radius: 0;
+}
+/* round buttons on hover */
+.rec.rec-arrow:hover {
+  border-radius: 50%;
+}
+/* hide disabled buttons */
+.rec.rec-arrow:disabled {
+  visibility: hidden;
+}
+/* disable default outline on focused items */
+/* add custom outline on focused items */
+.rec-carousel-item:focus {
+  outline: none;
+  box-shadow: inset 0 0 1px 1px lightgrey;
+}
+
 body,
 html {
   height: 100%;
 }
 
-.app-header {
-  h1 {
-    text-shadow: 2px 2px #fcfcfc;
-  }
-}
-
-// button:active {
-//   background: $hot-pink;
-//   border: none;
-// }
-
-// .button-group {
-//   border-color: hotpink;
-//   background: $navy;
-// }
 
 .bg-img {
   background: linear-gradient(rgba(6, 1, 65, 0.82), rgba(0, 0, 0, 0)),
     url(../images/landscape.png);
   background-size: cover;
-  position: relative;
+  //position: relative;
   width: 100%;
   height: auto;
   position: fixed;
@@ -38,9 +43,27 @@ html {
 
 .bg-container {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   min-height: 100vh;
   align-items: top;
+}
+
+.carousel {
+  display: flex;
+  height: 200px;
+  width: auto;
+  justify-content: center;
+  margin: 0 25px;
+
+}
+img:hover {
+  display: flex;
+  height: 300px;
+  width: auto;
+  justify-content: center;
+  margin: 0 25px;
+  
 }
 
 .bg-text {
