--- a/client/src/assets/scss/_variables.scss
+++ b/client/src/assets/scss/_variables.scss
@@ -4,4 +4,4 @@ $white: white;
 $hot-pink: #EB55B9;
 $light-purple: #650196;
 $buttonColor: #EB55B9;
-$lightblue: lightblue;
+$lightblue: rgb(182, 122, 225);
