--- a/client/src/assets/scss/app.scss
+++ b/client/src/assets/scss/app.scss
@@ -28,10 +28,23 @@ html {
   height: 100%;
 }
 
+button {
+  color: $white;
+  font-weight: bold;
+  font-size: 1em;
+  border-color: $hot-pink;
+  background: url(../../assets/images/btn2.png) no-repeat;
+  background-size: 150%;
+  border-radius: 5px;
+  padding: 8px 16px;
+  margin: 4px 2px;
+  border-style: solid;
+  border-width: 2px;
+}
 
 .bg-img {
-  background: linear-gradient(rgba(6, 1, 65, 0.82), rgba(0, 0, 0, 0)),
-    url(../images/landscape.png);
+  background: linear-gradient(#03104276, rgba(255, 0, 204, 0.351)), 
+    url(../images/balloons.png);
   background-size: cover;
   //position: relative;
   width: 100%;
@@ -54,16 +67,18 @@ html {
   height: 200px;
   width: auto;
   justify-content: center;
-  margin: 0 25px;
-
 }
+
+img {
+  border: 5px solid $hot-pink; 
+}
+
 img:hover {
   display: flex;
-  height: 300px;
+  height: 222px;
   width: auto;
   justify-content: center;
-  margin: 0 25px;
-  
+  border: 5px solid $hot-pink;  
 }
 
 .bg-text {
