small css changes

--- a/client/src/assets/scss/events.scss
+++ b/client/src/assets/scss/events.scss
@@ -298,8 +298,8 @@ p {
 
 .event-bg-img-all {
   background: 
-  linear-gradient(#03104298, rgba(255, 0, 204, 0.351)),
-  url(../images/fidel.jpg);
+  linear-gradient(#031042fb, rgba(255, 0, 204, 0.351)),
+  url(../images/two-sets.png);
   background-repeat: no-repeat;
   background-size: cover;
   min-height: 100%;
