events.scss change

--- a/client/src/assets/scss/events.scss
+++ b/client/src/assets/scss/events.scss
@@ -288,12 +288,7 @@ p {
 }
 
 .event-bg-img-all {
-  background: 
-<<<<<<< Updated upstream
-  linear-gradient(#031042fb, rgba(255, 0, 204, 0.351)),
-=======
-  linear-gradient(#031042fe, rgba(255, 0, 204, 0.351)),
->>>>>>> Stashed changes
+  background: linear-gradient(#031042fe, rgba(255, 0, 204, 0.351)),
   url(../images/two-sets.png);
   background-repeat: no-repeat;
   background-size: cover;
