styling changes, created end point for congratulations page and customize page, initial set up for edit-delete

--- a/client/src/assets/scss/topbar.scss
+++ b/client/src/assets/scss/topbar.scss
@@ -57,7 +57,7 @@ a {
 
 .glow-on-hover:before {
   content: '';
-  background: linear-gradient(45deg, #c800ff, #ff0000, #fffb00, #ff00c8, #7a00ff, #00ff7b, #7a00ff, #ff00c8, #ff0000);
+  background: linear-gradient(45deg, #4400ff, #ff00ff, #fffb00, #ff00c8, #7a00ff, #00ff7b, #ff00d4, #2f00ff, #00f7ff, #4400ff,);
   position: absolute;
   top: -2px;
   left:-2px;
