--- a/client/src/assets/scss/app.scss
+++ b/client/src/assets/scss/app.scss
@@ -54,6 +54,60 @@ button {
   left: 0;
 }
 
+.event-bg-img-congrats {
+  display: flex;
+  padding-left: 30px;
+  flex-direction: column;
+  h2, h3 {
+    font-size: 1em;
+  }
+  background: linear-gradient(#031042, rgba(255, 0, 204, 0.351)),
+  url(../images/landscape.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 100%;
+    min-width: 100%;
+    width: 100%;
+    height: auto;
+    position: fixed;
+    top: 100px;
+    left: 0;
+   
+    img {
+      border: 5px solid $navy; 
+      height: 130px;
+    }
+    
+    img:hover {
+      display: flex;
+      height: 130px;
+      width: auto;
+      justify-content: center;
+      border: 5px solid $hot-pink;  
+    }
+    
+}
+
+.event-bg-img-invites {
+  display: flex;
+  padding-left: 30px;
+  flex-direction: column;
+  h2, h3 {
+    font-size: 1em;
+  }
+  background: linear-gradient(#031042, rgba(255, 0, 204, 0.351)),
+  url(../images/night.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 100%;
+    min-width: 100%;
+    width: auto;
+    height: 60%;
+    position: fixed;
+    top: 100px;
+    left: 0;
+}
+
 .bg-container {
   display: flex;
   flex-direction: column;
@@ -75,16 +129,35 @@ button {
   }
 }
 
+.carouselcustomize {
+  display: flex;
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
+  padding-top: 30px;
+  height: 310px;
+  width: auto;
+  justify-content: center;
+
+  img:hover {
+    height: 280px;
+  }
+
+  a {
+    background: $navy;
+    border: 5px solid $navy; 
+  }
+}
+
 img {
   border: 5px solid $hot-pink; 
-  height: 320px;
+  height: 300px;
 }
 
 img:hover {
   display: flex;
-  height: 310px;
+  height: 290px;
   width: auto;
   justify-content: center;
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
   border: 5px solid $hot-pink;  
 }
 
@@ -109,7 +182,7 @@ img:hover {
 
 .glow-on-hover:before {
   content: '';
-  background: linear-gradient(45deg, #c800ff, #ff0000, #fffb00, #ff00c8, #7a00ff, #00ff7b, #7a00ff, #ff00c8, #ff0000);
+  background: linear-gradient(45deg, #4400ff, #ff00ff, #00e1ff, #ff00c8, #7a00ff, #00ff7b, #ff00d4, #2f00ff, #00f7ff, #4400ff,);
   position: absolute;
   top: -2px;
   left:-2px;
@@ -118,7 +191,7 @@ img:hover {
   filter: blur(5px);
   width: calc(100% + 14px);
   height: calc(100% + 14px);
-  animation: glowing 20s linear infinite;
+  animation: glowing 15s linear infinite;
   opacity: 0;
   transition: opacity .3s ease-in-out;
   border-radius: 25px;
