--- a/client/src/assets/scss/buttons-labels.scss
+++ b/client/src/assets/scss/buttons-labels.scss
@@ -6,8 +6,10 @@
   text-shadow: 2px 2px 5px #dd00ff;
   margin-left: 2em;
   margin-right: 1em;
+  box-shadow: 1px 2px $hot-pink;
   a {
     color: $white;
+  
   } 
 }
 
