changed color of event tile and position of images on the landing page

--- a/client/src/assets/scss/events.scss
+++ b/client/src/assets/scss/events.scss
@@ -53,7 +53,7 @@ p {
   justify-content: center;
   margin: 0 25px;
   p {
-    color: $hot-pink;
+    color: $white;
     font-size: 1em;
     font-weight: bold;
   }
