--- a/client/src/assets/scss/app.scss
+++ b/client/src/assets/scss/app.scss
@@ -104,8 +104,9 @@ html {
 .bg-container {
   display: flex;
   flex-direction: column;
+  
   align-items: center;
-  justify-content: space-around;
+  justify-content: center;
   min-height: 100vh;
   align-items: top;
 }
@@ -116,6 +117,7 @@ html {
   height: 335px;
   width: auto;
   justify-content: center;
+  padding-top: 100px;
 }
 
 .carouselcustomize {
