--- a/client/src/assets/scss/app.scss
+++ b/client/src/assets/scss/app.scss
@@ -111,6 +111,11 @@ html {
   align-items: top;
 }
 
+.arrow {
+  height: 16px;
+  width: auto;
+}
+
 .carousel {
   display: flex;
   padding-top: 30px;
